// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dependent data source 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"resource\\": {
        \\"name\\": \\"foo\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/resource\\",
            \\"uniqueId\\": \\"resource\\"
          }
        }
      }
    }
  },
  \\"data\\": {
    \\"test_data_source\\": {
      \\"data_source\\": {
        \\"depends_on\\": [
          \\"test_resource.resource\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/data_source\\",
            \\"uniqueId\\": \\"data_source\\"
          }
        }
      }
    }
  }
}"
`;

exports[`minimal configuration 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"data\\": {
    \\"test_data_source\\": {
      \\"test\\": {
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test\\",
            \\"uniqueId\\": \\"test\\"
          }
        }
      }
    }
  }
}"
`;

exports[`with boolean map 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test-data-source\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"data\\": {
    \\"test_data_source\\": {
      \\"test\\": {
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test-data-source/test\\",
            \\"uniqueId\\": \\"test\\"
          }
        }
      }
    }
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"test-resource\\": {
        \\"name\\": \\"\${data.test_data_source.test.boolean_map[\\\\\\"id\\\\\\"]}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test-data-source/test-resource\\",
            \\"uniqueId\\": \\"test-resource\\"
          }
        }
      }
    }
  }
}"
`;

exports[`with complex computed list 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test-data-source\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"data\\": {
    \\"test_data_source\\": {
      \\"test\\": {
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test-data-source/test\\",
            \\"uniqueId\\": \\"test\\"
          }
        }
      }
    }
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"test-resource\\": {
        \\"name\\": \\"\${data.test_data_source.test.complex_computed_list.0.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test-data-source/test-resource\\",
            \\"uniqueId\\": \\"test-resource\\"
          }
        }
      }
    }
  }
}"
`;

exports[`with number map 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test-data-source\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"data\\": {
    \\"test_data_source\\": {
      \\"test\\": {
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test-data-source/test\\",
            \\"uniqueId\\": \\"test\\"
          }
        }
      }
    }
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"test-resource\\": {
        \\"name\\": \\"\${data.test_data_source.test.number_map[\\\\\\"id\\\\\\"]}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test-data-source/test-resource\\",
            \\"uniqueId\\": \\"test-resource\\"
          }
        }
      }
    }
  }
}"
`;

exports[`with string map 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test-data-source\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"data\\": {
    \\"test_data_source\\": {
      \\"test\\": {
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test-data-source/test\\",
            \\"uniqueId\\": \\"test\\"
          }
        }
      }
    }
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"test-resource\\": {
        \\"name\\": \\"\${data.test_data_source.test.string_map[\\\\\\"id\\\\\\"]}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test-data-source/test-resource\\",
            \\"uniqueId\\": \\"test-resource\\"
          }
        }
      }
    }
  }
}"
`;
